Removed dead classes and paths.
 * Removed the logic that built object trees. Thas is now handled by String
   Beans.
 * Split paths out to the Permeate project.
 * Testing of new object infusers.

[#4 state:resolved]