@@ -1,27 +1,29 @@
 package com.goodworkalan.infuse;
+import static org.testng.Assert.*;
 
-import static org.testng.Assert.assertEquals;
-
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 import org.testng.annotations.Test;
 
+/**
+ * Unit tests for the {@link Infuser} class.
+ *
+ * @author Alan Gutierrez
+ */
 public class InfuserTest {
+    /** Test coversion to integer.  */
     @Test
-    public void infuse() {
+    public void defaults() throws MalformedURLException {
         Infuser infuser = new Infuser();
-        infuser.setInfuser(Character.class, CharacterInfuser.class);
-        assertEquals(1, infuser.infuse(int.class, "1"));
-        assertEquals('c', infuser.infuse(char.class, "c"));
-        assertEquals(1, infuser.infuse(Integer.class, "1"));
-        assertEquals('c', infuser.infuse(Character.class, "c"));
-        assertEquals(null, infuser.infuse(Character.class, null));
-        assertEquals('\0', infuser.infuse(char.class, null));
-        assertEquals(null, infuser.infuse(Integer.class, null));
-        assertEquals(0, infuser.infuse(int.class, null));
-        assertEquals(null, infuser.infuse(Boolean.class, null));
-        assertEquals(false, infuser.infuse(boolean.class, null));
-        assertEquals(infuser.infuse(String.class, "a"), "a");
-        assertEquals(URI.create("http://blogometer.com"), infuser.infuse(URI.class, "http://blogometer.com"));
+        assertEquals(infuser.infuse(int.class, "1"), new Integer(1));
+        assertEquals(infuser.infuse(int.class, "1"), new Integer(1));
+        assertEquals(infuser.infuse(int.class, null), new Integer(0));
+        assertEquals(infuser.infuse(char.class, "c"), new Character('c'));
+        assertEquals(infuser.infuse(char.class, null), new Character('\0'));
+        assertNull(infuser.infuse(Character.class, null));
+        assertEquals(infuser.infuse(URL.class, "http://hello.com"), new URL("http://hello.com"));
+        assertNull(infuser.infuse(Integer.class, null));
+        assertEquals(infuser.infuse(String.class, "1"), "1");
     }
 }
